--- a/style.css
+++ b/style.css
@@ -6,126 +6,48 @@
   
   body {
     font-family: 'Jost', sans-serif;
-    background-color: whitesmoke;
-  }
-  
-  button {
-    padding: 10px;
-    width: 70px;
-    color: white;
-    font-family: inherit;
-    border-radius: 5px;
-    cursor: pointer;
-    border: 1px solid black;
-    background-color: black;
-    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.5);
-    font-size: 0.9rem;
-  }
-  
-  .app {
-    max-width: 1224px;
-    width: 92%;
-    margin: 20px auto;
+    background-color: #444444;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-  }
-  
-  .header {
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    gap: 15px;
-    width: 100%;
-    padding-bottom: 10px;
-  }
-  
-  .header h2 {
-    min-width: fit-content;
-  }
-  
-  .server-message {
-    width: 100%;
-    padding: 16px;
-    border-radius: 5px;
-  }
-  
-  .input-div {
-    width: 100%;
-    height: 200px;
-    border-radius: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border: 2px dotted black;
-    background-color: white;
-    position: relative;
-  }
-  
-  .input-div .browse {
-    color: black;
-    font-weight: bold;
-  }
-  
-  .file {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-  }
-  
-  .saved-div,
-  .queued-div {
-    width: 100%;
-    min-height: 150px;
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    gap: 15px;
-    position: relative;
-    border-radius: 5px;
-    border: 2px dotted black;
-    background-color: white;
-  }
-  
-  .saved-div .image,
-  .queued-div .image {
-    height: 150px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-    overflow: hidden;
-    position: relative;
-  }
-  
-  .saved-div .image:nth-child(4n),
-  .queued-div .image:nth-child(4n) {
-    margin-right: 0;
-  }
-  
-  .saved-div .image img,
-  .queued-div .image img {
-    height: 100%;
-    width: 100%;
-  }
-  
-  .saved-div .image span,
-  .queued-div .image span {
-    position: absolute;
-    top: -4px;
-    right: 4px;
-    cursor: pointer;
-    font-size: 22px;
     color: white;
   }
   
-  .saved-div .image span:hover,
-  .queued-div .image span:hover {
-    opacity: 0.8;
+  .container{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+  }
+
+  label {
+    background-color: rgb(130, 69, 0);
+    color: white;
+    padding: 0.5rem;
+    font-family: sans-serif;
+    border-radius: 0.3rem;
+    cursor: pointer;
+    margin: 20px auto;
   }
   
-  .saved-div .span--hidden,
-  .queued-div .span--hidden {
-    visibility: hidden;
+  #display_image{
+    height: 500px;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    margin: 0 auto;
+  }
+
+
+  #output__message{
+    margin-top: 55px;
+    display: none;
+    width: 300px;
+  }
+
+  .showResult{
+    display: block!important;
   }
