--- a/style.css
+++ b/style.css
@@ -37,11 +37,10 @@
   }
   
   #display_image{
-    height: 700px;
+    height: 100%;
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
-
     margin: 0 auto;
   }
 
